--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>LIGHTFIELD .:. nLucis Creative</title>
 </head>
 <body style="margin: 0px !important; padding: 0px !important; background-color: black;">
+  <!-- This should not need to be edited outside of adding or removing library dependencies in the future -->
   <script src="Lib/p5.js"></script>
   <script src="Lib/addons/p5.sound.js"></script>
   <script src="Script/code.js"></script>
