--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="CSS/style.css">
   <title>LIGHTFIELD .:. nLucis Creative</title>
 </head>
-<body style="margin: 0px !important; padding: 0px !important; background-color: black;">
+<body>
   <!-- This should not need to be edited outside of adding or removing library dependencies in the future -->
   <script src="Lib/p5.js"></script>
   <script src="Lib/addons/p5.sound.js"></script>
