--- a/index.html
+++ b/index.html
@@ -8,9 +8,23 @@
   <title>LIGHTFIELD .:. nLucis Creative</title>
 </head>
 <body>
-  <!-- This should not need to be edited outside of adding or removing library dependencies in the future -->
+  <!-- Core P5 -->
   <script src="Lib/p5.js"></script>
+
+  <!-- Addons -->
+  <script src="Lib/addons/quicksettings.js"></script> 
+  <script src="https://unpkg.com/ml5@latest/dist/ml5.min.js"></script>
+  <script src="https://molleindustria.github.io/p5.play/lib/p5.play.js"></script>
+  <!-- ^ Do First ^ -->
+
+  <script src="Lib/addons/p5.gui.js"></script>
   <script src="Lib/addons/p5.sound.js"></script>
-  <script src="Script/code.js"></script>
+  <script src="Lib/addons/p5.funcGen.js"></script>
+  <script src="Lib/addons/p5.clickable.js"></script>
+  <script src="Lib/addons/p5.collide2d.js"></script>
+  <script src="Lib/addons/p5.sceneManager.js"></script>
+
+  <!-- The Cheese -->
+  <script src="Script/cheese.js"></script>
 </body>
 </html>
